:lipstick: Remove scrollbar and fix border radius

--- a/src/components/InfotainmentQRCode/InfotainmentQRCode.module.css
+++ b/src/components/InfotainmentQRCode/InfotainmentQRCode.module.css
@@ -3,7 +3,7 @@
     bottom: 0;
     right: 0;
 
-    border-radius: 4px 0 0 0;
+    border-radius: 4px 0 0 0 !important;
 }
 
 .infotainment_qrcode > svg {
